# spark-wasm-udf

./: .gitignore  .gitmodules  Makefile  README.md  run_with_csharp.sh  run_with_js.sh  run_with_rust.sh  run_with_rust_no_chicory.sh  run_with_typescript.sh
csharp_wasm_udf/: Literal.cs  Makefile  Plugin.csproj  Program.cs  README.md  Types.cs  Wasmudf.cs  csharp_wasm_udf.sln
js_wasm_udf/: Makefile  esbuild.js  package-lock.json  package.json
js_wasm_udf/src/: index.d.ts  index.js  literal_pb.js  types_pb.js  wasmudf_pb.js
proto/: literal.proto  types.proto  wasmudf.proto
rust_wasm_udf/: Cargo.toml  Makefile  build.rs
rust_wasm_udf/src/: lib.rs
wasm_spark/: Makefile  build.sbt
wasm_spark/src/main/java/co/gaffe/proto/: DataType.java  DataTypeOrBuilder.java  Literal.java  LiteralOrBuilder.java  LiteralOuterClass.java  Types.java  UDFArgs.java  UDFArgsOrBuilder.java  Wasmudf.java
wasm_spark/src/main/scala/co/gaffe/: ChicoryWASMPluginCache.scala  Runner.scala  WASMPluginCache.scala
wasm_spark/src/main/scala/org/apache/spark/sql/: CustomFunctions.scala
wasm_spark/src/main/scala/org/apache/spark/sql/catalyst/expressions/: WASMUDF.scala  WASMUDFExpression.scala
wasm_spark/src/main/scala/org/apache/spark/sql/connect/common/: DataTypeProtoConverterV2.scala  LiteralValueProtoConverterV2.scala  ProtoDataTypesV2.scala
